# aspen

./: .coverage-baseline.toml  .env.example  .gitignore  .markdownlint.yaml  .nixos-test-history  .pre-commit-config.yaml  .pre-commit-guide.md  AGENTS.md  ANALYSIS_INDEX.md  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ASPEN_AUDIT_REPORT.txt  AUDIT_QUICK_REFERENCE.md  AUDIT_SUMMARY.md  CLOUD_HYPERVISOR_QUICK_REFERENCE.md  CODEBASE_ANALYSIS.md  CONFIGURATION.md  COUPLING_ANALYSIS.md  COUPLING_RECOMMENDATIONS.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  DEPENDENCY_AUDIT_2025-12-07.md  DEPENDENCY_GRAPH.txt  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_STRATEGY.md  DISTRIBUTED_WORKER_SUMMARY.md  Dockerfile.test  EXPLORATION_SUMMARY.md  FIXES_SUMMARY.md  FLAWLESS-INDEX.md  FLAWLESS-SETUP.md  FLAWLESS-WORKER-GUIDE.md  GEMINI.md  GENERALIZATION_ANALYSIS.md  LOG_VIEWING.md  MADSIM_PHASE1_COMPLETE.md  METRICS_IMPLEMENTATION_EXAMPLES.md  METRICS_OBSERVABILITY_REPORT.md  (+81 more)
.agent/: napkin.md  (+1 more)
crates/aspen-api/: Cargo.toml
crates/aspen-api/src/: lib.rs
crates/aspen-auth/: Cargo.toml
crates/aspen-auth-core/: Cargo.toml
crates/aspen-auth-core/src/: capability.rs  constants.rs  error.rs  lib.rs  token.rs  verified_auth.rs  verified_credential.rs
crates/aspen-auth/src/: builder.rs  capability.rs  constants.rs  credential.rs  error.rs  hmac_auth.rs  lib.rs  revocation.rs  tests.rs  token.rs  utils.rs  verified_auth.rs  verified_credential.rs  verifier.rs
crates/aspen-auth/verus/: credential_spec.rs  delegation_spec.rs  lib.rs  revocation_spec.rs  signature_spec.rs  timestamp_spec.rs  token_state_spec.rs
crates/aspen-automerge/: Cargo.toml
crates/aspen-automerge-handler/: Cargo.toml
crates/aspen-automerge-handler/src/: handler.rs  lib.rs
crates/aspen-automerge-plugin/: Cargo.toml
crates/aspen-automerge/src/: capability.rs  constants.rs  error.rs  lib.rs  store.rs  sync_protocol.rs  ticket.rs  types.rs
crates/aspen-automerge/tests/: capability_auth_e2e.rs
crates/aspen-automerge/verus/: change_spec.rs  document_spec.rs  lib.rs  sync_spec.rs
crates/aspen-blob/: Cargo.toml
crates/aspen-blob-handler/: Cargo.toml
crates/aspen-blob-handler/src/: executor.rs  handler.rs  lib.rs
crates/aspen-blob/src/: background_downloader.rs  constants.rs  events.rs  kv_integration.rs  lib.rs  store.rs  types.rs
crates/aspen-blob/verus/: blob_spec.rs  concurrency_spec.rs  gc_spec.rs  lib.rs
crates/aspen-cache/: Cargo.toml
crates/aspen-cache-handler/: Cargo.toml
crates/aspen-cache-handler/src/: cache_handler.rs  lib.rs  migration_handler.rs
crates/aspen-cache/src/: error.rs  index.rs  lib.rs  nar.rs  narinfo.rs  nix32.rs  signing.rs
crates/aspen-cache/verus/: entry_spec.rs  lib.rs  stats_spec.rs
crates/aspen-calendar/: Cargo.toml
crates/aspen-calendar-handler/: Cargo.toml
crates/aspen-calendar-handler/src/: executor.rs  lib.rs
crates/aspen-calendar-handler/tests/: integration.rs
crates/aspen-calendar/src/: error.rs  lib.rs  store.rs  types.rs
crates/aspen-calendar/tests/: calendar_integration.rs
crates/aspen-castore/: Cargo.toml
crates/aspen-castore/src/: circuit_breaker.rs  client.rs  lib.rs  protocol.rs  server.rs  tests.rs
crates/aspen-castore/tests/: nar_test.rs  wire_test.rs
crates/aspen-ci/: Cargo.toml  build.rs
crates/aspen-ci-agent/: Cargo.toml
crates/aspen-ci-agent/src/: error.rs  executor.rs  lib.rs  main.rs  protocol.rs  vsock_server.rs
crates/aspen-ci-core/: Cargo.toml
crates/aspen-ci-core/src/: error.rs  lib.rs  log_writer.rs
crates/aspen-ci-executor-nix/: Cargo.toml  build.rs
crates/aspen-ci-executor-nix/src/: artifacts.rs  build_service.rs  cache.rs  call_flake.rs  config.rs  derivation.rs  eval.rs  executor.rs  fetch.rs  flake_compat.rs  flake_compat_bundled.nix  flake_lock.rs  flakeref.rs  lib.rs  materialize.rs  payload.rs  snix.rs  test_support.rs  timing.rs  upstream_cache.rs  worker.rs
crates/aspen-ci-executor-nix/tests/: snix_only_integration_test.rs  snix_only_proptest.rs  snix_only_unit_test.rs
crates/aspen-ci-executor-shell/: Cargo.toml
crates/aspen-ci-executor-shell/src/: cache_proxy.rs  common.rs  lib.rs  local_executor.rs  resource_limiter.rs
crates/aspen-ci-executor-shell/tests/: log_bridge_test.rs
crates/aspen-ci-executor-vm/: Cargo.toml
crates/aspen-ci-executor-vm/src/: api_client.rs  config.rs  error.rs  lib.rs  payload.rs  pool.rs  snapshot.rs  speculative.rs  vm.rs  worker.rs
crates/aspen-ci-executor-vm/tests/: snapshot_restore.rs
crates/aspen-ci-handler/: Cargo.toml
crates/aspen-ci-handler/src/: executor.rs  handler.rs  lib.rs
crates/aspen-ci-handler/tests/: log_streaming_integration.rs  trigger_pipeline_tree_walk.rs
crates/aspen-ci/src/: adapters.rs  checkout.rs  error.rs  failure_cache.rs  forge_reporter.rs  lib.rs  log_writer.rs  nix_config.rs  schema_gen.rs  status_reporter.rs
crates/aspen-ci/tests/: cache_substituter_test.rs  cgroup_isolation_test.rs  cloud_hypervisor_test.rs  local_executor_integration_test.rs  nix_build_integration_test.rs
crates/aspen-cli/: Cargo.toml  build.rs
crates/aspen-client/: Cargo.toml
crates/aspen-client-api/: Cargo.toml
crates/aspen-client-api/src/: lib.rs  messages.rs
crates/aspen-client-api/tests/: client_rpc_postcard_baseline.rs  serialization_snapshots.rs  (+2 more)
crates/aspen-client-rpc/: Cargo.toml
crates/aspen-cluster/: Cargo.toml
crates/aspen-cluster-bridges/: Cargo.toml
crates/aspen-cluster-handler/: Cargo.toml
crates/aspen-cluster-types/: Cargo.toml
fuzz/: Cargo.toml
fuzz/dictionaries/: fuzz_http_api-auto.dict  fuzz_raft_rpc-auto.dict  fuzz_snapshot_json-auto.dict  fuzz_tui_rpc-auto.dict  json.dict  postcard.dict  raft.dict
fuzz/fuzz_targets/: fuzz_client_rpc.rs  fuzz_client_rpc_roundtrip.rs  fuzz_clock_drift.rs  fuzz_cluster_ticket.rs  fuzz_config.rs  fuzz_differential.rs  fuzz_gossip.rs  fuzz_http_api.rs  fuzz_integrity.rs  fuzz_log_entries.rs  fuzz_metadata.rs  fuzz_protocol_handler.rs  fuzz_raft_model_guided.rs  fuzz_raft_rpc.rs  fuzz_roundtrip.rs  fuzz_snapshot_json.rs  fuzz_tui_rpc.rs
fuzz/src/: lib.rs
(+6264 files in other folders)
