[package]
name = "aspen"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "generate_fuzz_corpus"
path = "src/bin/generate_fuzz_corpus.rs"
required-features = ["fuzzing"]

[[bin]]
name = "git-remote-aspen"
path = "src/bin/git-remote-aspen/main.rs"
required-features = ["git-bridge"]

[[bin]]
name = "aspen-node"
path = "src/bin/aspen_node/main.rs"
# Bootstrap module requires blob, docs, jobs, hooks for full cluster initialization
required-features = ["jobs", "docs", "blob", "hooks", "automerge"]

[[bin]]
name = "aspen-generate-schema"
path = "src/bin/generate_schema.rs"
required-features = ["ci"]

# CLI moved to crates/aspen-cli
# [[bin]]
# name = "aspen-cli"
# path = "src/bin/aspen-cli/main.rs"

[[example]]
name = "submit_job"
path = "examples/submit_job.rs"
required-features = ["jobs"]

[[example]]
name = "node_service"
path = "examples/node_service.rs"
required-features = ["jobs", "docs", "hooks", "federation"]

[[example]]
name = "test_vm_standalone"
path = "examples/test_vm_standalone.rs"
required-features = ["plugins-vm"]

[workspace]
members = [
    ".",
    "scripts/tutorial-verify",
    "crates/aspen-client",
    "crates/aspen-client-api",
    "crates/aspen-constants",
    "crates/aspen-cluster-types",
    "crates/aspen-kv-types",
    "crates/aspen-traits",
    "crates/aspen-core",
    "crates/aspen-hlc",
    "crates/aspen-layer",
    "crates/aspen-time",
    "crates/aspen-disk",
    "crates/aspen-storage-types",
    "crates/aspen-vault",
    "crates/aspen-crypto-types",
    # aspen-coordination extracted to ~/git/aspen-coordination
    "crates/aspen-blob",
    "crates/aspen-raft-types",
    "crates/aspen-raft-network",
    "crates/aspen-raft",
    "crates/aspen-redb-storage",
    "crates/aspen-cluster",
    "crates/aspen-cluster-bridges",
    # aspen-docs extracted to ~/git/aspen-docs
    "crates/aspen-testing",
    "crates/aspen-testing-core",
    "crates/aspen-testing-fixtures",
    "crates/aspen-testing-madsim",
    "crates/aspen-testing-network",
    "crates/aspen-ticket",
    "crates/aspen-sql",
    "crates/aspen-auth",
    "crates/aspen-sharding",
    # aspen-forge extracted to ~/git/aspen-forge
    "crates/aspen-hooks-types",
    # aspen-hooks extracted to ~/git/aspen-hooks
    # aspen-jobs + workers extracted to ~/git/aspen-jobs
    # aspen-tui extracted to ~/git/aspen-tui
    "crates/aspen-transport",
    "crates/aspen-rpc-core",
    "crates/aspen-rpc-handlers",
    "crates/aspen-forge-handler",
    "crates/aspen-secrets-handler",

    "crates/aspen-blob-handler",
    "crates/aspen-cli",
    # aspen-secrets extracted to ~/git/aspen-secrets
    # aspen-automerge extracted to ~/git/aspen-automerge
    # CI subsystem extracted to ~/git/aspen-ci
    "crates/aspen-ci-handler",
    "crates/aspen-query-handler",
    "crates/aspen-hooks-handler",
    "crates/aspen-job-handler",
    "crates/aspen-kv-handler",
    "crates/aspen-core-essentials-handler",
    "crates/aspen-docs-handler",
    "crates/aspen-cluster-handler",
    # aspen-federation extracted to ~/git/aspen-federation
    "crates/aspen-coordination-protocol",
    "crates/aspen-forge-protocol",
    "crates/aspen-jobs-protocol",
    "crates/aspen-proxy",
    "crates/aspen-dht-discovery",
    "crates/aspen-plugin-api",
    "crates/aspen-wasm-plugin",
    "crates/aspen-wasm-guest-sdk",

    "examples/plugins/kv-counter",
    "examples/plugins/audit-logger",
    "examples/plugins/scheduled-cleanup",
    "examples/plugins/kv-handler",
    "examples/plugins/sql-handler",
]

# Required for vendored openraft workspace inheritance
[workspace.package]
version = "0.10.0"
edition = "2024"
authors = ["Databend Authors <opensource@datafuselabs.com>", "Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Advanced Raft consensus"
documentation = "https://docs.rs/openraft"
homepage = "https://github.com/databendlabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databendlabs/openraft"

# Workspace dependencies for openraft (mirrors openraft/Cargo.toml)
# NOTE: These versions are aligned with Aspen's direct dependencies where applicable.
# When updating openraft, re-check these for compatibility.
[workspace.dependencies]
anyerror = "0.1.10"
anyhow = "1.0.63"
async-entry = "0.3.1"
base64 = "0.22"  # Base64 encoding for binary data
blake3 = "1.5"  # Hash function for content addressing
byte-unit = "5.1.4"
bytes = "1.7"  # Aligned with direct dependency
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "env"] }  # Aligned with direct dependency
derive_more = { version = "1.0", features = ["std", "from", "try_into", "display"] }
futures = "0.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
openraft-macros = { path = "openraft/macros", version = "0.10.0" }
pretty_assertions = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
semver = "1.0.14"
serde = { version = "1.0", features = ["derive", "rc"] }  # Aligned with direct dependency
serde_json = "1.0"  # Aligned with direct dependency
syn = "2.0"
tempfile = "3.4.0"
test-harness = "0.3.0"
thiserror = "2.0"  # Aligned with direct dependency (major version bump)
tokio = { version = "1.48.0", default-features = false, features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }  # Aligned with direct dependency
tracing = "0.1.40"
tracing-appender = "0.2.0"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Aligned with direct dependency
validit = "0.2.2"
aspen-client = { path = "crates/aspen-client" }
aspen-client-api = { path = "crates/aspen-client-api" }
aspen-constants = { path = "crates/aspen-constants" }
aspen-cluster-types = { path = "crates/aspen-cluster-types" }
aspen-core = { path = "crates/aspen-core" }
aspen-hlc = { path = "crates/aspen-hlc" }
aspen-kv-types = { path = "crates/aspen-kv-types" }
aspen-layer = { path = "crates/aspen-layer" }
aspen-time = { path = "crates/aspen-time" }
aspen-disk = { path = "crates/aspen-disk" }
aspen-storage-types = { path = "crates/aspen-storage-types" }
aspen-vault = { path = "crates/aspen-vault" }
aspen-crypto-types = { path = "crates/aspen-crypto-types" }
aspen-traits = { path = "crates/aspen-traits" }
aspen-coordination = { path = "../aspen-coordination/crates/aspen-coordination" }
aspen-blob = { path = "crates/aspen-blob" }
aspen-sql = { path = "crates/aspen-sql" }
aspen-auth = { path = "crates/aspen-auth" }
aspen-sharding = { path = "crates/aspen-sharding" }
aspen-raft-types = { path = "crates/aspen-raft-types" }
aspen-raft-network = { path = "crates/aspen-raft-network" }
aspen-raft = { path = "crates/aspen-raft" }
aspen-redb-storage = { path = "crates/aspen-redb-storage" }
aspen-cluster = { path = "crates/aspen-cluster" }
aspen-cluster-bridges = { path = "crates/aspen-cluster-bridges" }
aspen-docs = { path = "../aspen-docs/crates/aspen-docs" }
aspen-testing = { path = "crates/aspen-testing" }
aspen-testing-core = { path = "crates/aspen-testing-core" }
aspen-testing-fixtures = { path = "crates/aspen-testing-fixtures" }
aspen-testing-madsim = { path = "crates/aspen-testing-madsim" }
aspen-testing-network = { path = "crates/aspen-testing-network" }
aspen-ticket = { path = "crates/aspen-ticket" }
aspen-forge = { path = "../aspen-forge/crates/aspen-forge" }
aspen-hooks-types = { path = "crates/aspen-hooks-types" }
aspen-hooks = { path = "../aspen-hooks/crates/aspen-hooks" }
aspen-tui = { path = "../aspen-tui/crates/aspen-tui" }
aspen-transport = { path = "crates/aspen-transport" }
aspen-rpc-handlers = { path = "crates/aspen-rpc-handlers", default-features = false }
aspen-cli = { path = "crates/aspen-cli" }
aspen-jobs = { path = "../aspen-jobs/crates/aspen-jobs" }
aspen-jobs-worker-blob = { path = "../aspen-jobs/crates/aspen-jobs-worker-blob" }
aspen-jobs-worker-replication = { path = "../aspen-jobs/crates/aspen-jobs-worker-replication" }
aspen-jobs-worker-sql = { path = "../aspen-jobs/crates/aspen-jobs-worker-sql" }
aspen-jobs-worker-maintenance = { path = "../aspen-jobs/crates/aspen-jobs-worker-maintenance" }
aspen-jobs-worker-shell = { path = "../aspen-jobs/crates/aspen-jobs-worker-shell" }
aspen-secrets = { path = "../aspen-secrets/crates/aspen-secrets" }
aspen-automerge = { path = "../aspen-automerge/crates/aspen-automerge" }
# CI subsystem (extracted to ~/git/aspen-ci)
aspen-nickel = { path = "../aspen-ci/crates/aspen-nickel" }
aspen-ci = { path = "../aspen-ci/crates/aspen-ci" }
aspen-ci-core = { path = "../aspen-ci/crates/aspen-ci-core" }
aspen-ci-executor-shell = { path = "../aspen-ci/crates/aspen-ci-executor-shell" }
aspen-ci-executor-nix = { path = "../aspen-ci/crates/aspen-ci-executor-nix" }
aspen-ci-executor-vm = { path = "../aspen-ci/crates/aspen-ci-executor-vm" }
aspen-cache = { path = "../aspen-nix/crates/aspen-cache" }
irpc = { version = "0.11.0", features = ["derive"] }
n0-future = "0.3.2"
nickel-lang = "2.0"
postcard = { version = "1.0", features = ["alloc"] }
hmac = "0.12"  # Used by aspen-cluster and aspen-raft
sha2 = "0.10"  # Used by aspen-cluster and aspen-raft
static_assertions = "1.1"  # Compile-time type layout verification
flate2 = "1.0"  # Used by git-remote-aspen and aspen-cli
tar = "0.4"  # Used by aspen-cli for archive operations
bolero = "0.13"  # Property-based testing with Bolero
bolero-generator = "0.13"  # Bolero generator support
schemars = "0.8"  # JSON Schema generation (0.8 for Draft 7 compatibility with json-schema-to-nickel)

# SNIX dependencies for Nix store integration
# Using git with specific revision for reproducible builds
# For local development, use .cargo/config.toml to override with path dependencies
snix-castore = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559" }
snix-store = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559" }
nix-compat = { git = "https://git.snix.dev/snix/snix.git", rev = "8fe3bade2013befd5ca98aa42224fa2a23551559", features = ["async", "serde"] }
prost = "0.13"  # Protobuf encoding for SNIX types
tonic = { version = "0.12", features = ["transport"] }  # gRPC for SNIX services
async-stream = "0.3"  # Async stream utilities for SNIX
aspen-snix = { path = "../aspen-nix/crates/aspen-snix" }
aspen-nix-cache-gateway = { path = "../aspen-nix/crates/aspen-nix-cache-gateway" }
aspen-federation = { path = "../aspen-federation/crates/aspen-federation" }
aspen-proxy = { path = "crates/aspen-proxy" }
aspen-coordination-protocol = { path = "crates/aspen-coordination-protocol" }
aspen-forge-protocol = { path = "crates/aspen-forge-protocol" }
aspen-jobs-protocol = { path = "crates/aspen-jobs-protocol" }
aspen-dht-discovery = { path = "crates/aspen-dht-discovery" }
aspen-plugin-api = { path = "crates/aspen-plugin-api" }
aspen-wasm-plugin = { path = "crates/aspen-wasm-plugin" }

# h3-iroh for HTTP/3 over Iroh QUIC (Nix binary cache gateway)
h3 = "0.0.8"
h3-iroh = { git = "https://github.com/n0-computer/iroh-experiments" }
ed25519-dalek = "2.1"  # Narinfo signing

[dependencies]
aspen-client = { workspace = true }
aspen-core = { workspace = true }  # global-discovery forwarded via feature
aspen-coordination = { workspace = true }
aspen-blob = { workspace = true, optional = true }
aspen-sql = { workspace = true, optional = true }
aspen-auth = { workspace = true }
aspen-sharding = { workspace = true }
aspen-raft-types = { workspace = true }
aspen-raft = { workspace = true }
aspen-cluster = { workspace = true }
aspen-client-api = { workspace = true }
aspen-docs = { workspace = true, optional = true }
aspen-jobs = { workspace = true, optional = true }
aspen-jobs-worker-maintenance = { workspace = true, optional = true }
aspen-jobs-worker-shell = { workspace = true, optional = true }
aspen-transport = { workspace = true }
aspen-rpc-handlers = { workspace = true }
aspen-hooks-types = { workspace = true }
aspen-hooks = { workspace = true, optional = true }
aspen-forge = { workspace = true, optional = true }
aspen-testing = { workspace = true, optional = true }
aspen-secrets = { workspace = true, optional = true }
aspen-automerge = { workspace = true, optional = true }
aspen-ci = { workspace = true, optional = true }
aspen-cache = { workspace = true, optional = true }
aspen-snix = { workspace = true, optional = true }
snix-castore = { workspace = true, optional = true }
snix-store = { workspace = true, optional = true }
aspen-nix-cache-gateway = { workspace = true, optional = true }
aspen-proxy = { workspace = true, optional = true }
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-base = "0.95.1"
iroh-gossip = "0.95"
iroh-blobs = { version = "0.97", optional = true }
iroh-docs = { version = "0.95", optional = true }
iroh-tickets = "0.2"
blake3 = { workspace = true }
bytes = "1.7"
rand = "0.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
schemars = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
thiserror = "2.0"
hex = "0.4"
url = "2"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
openraft = { path = "openraft/openraft", features = ["serde", "type-alias"] }
redb = "2.0.0"
snafu = "0.8.9"
irpc = { version = "0.11.0", features = ["derive"] }
madsim = { version = "0.2.34", features = ["macros"], optional = true }
mad-turmoil = { git = "https://github.com/s2-streamstore/mad-turmoil", rev = "ef75169ec299c4160af3052b2194b3ee5b048b0a", optional = true }
n0-future = { workspace = true }
async-channel = "2.3"
toml = "0.8"
libc = "0.2"
parking_lot = "0.12"

# base64 is used by core modules
base64 = "0.22"

# DataFusion SQL engine (optional, gated by 'sql' feature)
datafusion = { version = "45", default-features = false, features = ["nested_expressions"], optional = true }
arrow = { version = "54", optional = true }
# regex is used for SQL validation when sql feature is enabled
regex = { version = "1.10", optional = true }

# Global content discovery via BitTorrent Mainline DHT (optional)
mainline = { version = "6.0", optional = true, default-features = false, features = ["async"] }

# Git bridge zlib compression (optional, gated by 'git-bridge' feature)
flate2 = { workspace = true, optional = true }

# TUI is now a separate crate: aspen-tui
# FUSE filesystem is now a separate crate: aspen-fuse

[dev-dependencies]
# Base testing utilities - features enabled via required-features in [[test]] sections
aspen-testing = { workspace = true }
# Property-based testing with Bolero (unified frontend for multiple backends)
bolero = "0.13"
bolero-generator = "0.13"
# Keep proptest for madsim compatibility (madsim tests use proptest strategies internally)
proptest = "1.0"
# SHA-1 for git bridge integration tests
sha1 = "0.10"

tokio-test = "0.4"
cargo-nextest = "0.9.60"
tempfile = "3.10"
# rand09 alias removed - now using rand 0.9 directly
anyerror = { version = "0.1", features = ["anyhow"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
portpicker = "0.1"

# VM-based integration testing with Cloud Hypervisor
cloud-hypervisor-client = "0.3"

[features]
# Minimal default: just Raft + KV + Coordination (no optional features)
# Users opt-in to heavier features (SQL, DNS, Forge, CI) as needed
default = []

# Full production: all features enabled
full = ["sql", "blob", "forge", "git-bridge", "plugins", "shell-worker", "secrets", "global-discovery", "automerge", "ci", "hooks", "jobs", "docs", "federation", "proxy"]

# Forge preset: Git hosting with blob storage, content discovery, and docs
forge-full = ["forge", "git-bridge", "blob", "global-discovery", "docs"]

# CI preset: Full CI/CD pipelines with forge, shell execution, and global discovery
ci-full = ["ci", "forge", "blob", "shell-worker", "global-discovery", "jobs"]
# CI preset: Basic CI without snix (lighter build)
ci-basic-full = ["ci-basic", "forge", "blob", "shell-worker", "global-discovery", "jobs"]
testing = ["dep:aspen-testing", "aspen-testing/router"]
# Forge: Git on Aspen - decentralized code collaboration with Radicle-like features
forge = ["dep:aspen-forge", "aspen-rpc-handlers/forge"]
# Git bridge: bidirectional sync with standard Git repositories (GitHub, GitLab, Gitea, etc.)
git-bridge = ["forge", "aspen-forge/git-bridge", "aspen-rpc-handlers/git-bridge", "dep:flate2"]
# DataFusion SQL query engine for Redb storage backend
sql = ["dep:aspen-sql", "dep:datafusion", "dep:arrow", "dep:regex", "aspen-rpc-handlers/sql", "aspen-raft/sql", "aspen-testing?/sql"]
# Blob storage support for iroh-blobs operations
blob = ["dep:aspen-blob", "dep:iroh-blobs", "aspen-rpc-handlers/blob", "aspen-cluster/blob", "aspen-client/blob-store"]
# Plugin umbrella: all hyperlight-based execution backends
plugins = ["plugins-vm", "plugins-wasm", "plugins-rpc"]
# Hyperlight VM sandbox for native binaries
plugins-vm = ["aspen-jobs/plugins-vm"]
# WASM Component Model job execution via hyperlight-wasm
plugins-wasm = ["aspen-jobs/plugins-wasm"]
# WASM handler plugins for dynamic RPC handler loading
plugins-rpc = ["aspen-rpc-handlers/plugins-rpc", "blob"]
# Shell command worker for executing system commands as jobs (requires auth)
shell-worker = ["dep:aspen-jobs-worker-shell", "jobs", "blob"]
# Nix build executor for CI Nix flake builds
# nix-executor: moved to aspen-nix repo
# Cloud Hypervisor VM executor for CI VM-isolated jobs
ci-vm-executor = ["aspen-ci/plugins-vm"]
# TUI is now a separate crate: aspen-tui (see crates/aspen-tui)
# Fuzzing feature exposes internals for fuzz testing
fuzzing = []
# Bolero property-based testing (for dev/CI, uses bolero dev-dependency)
bolero = []
# Global content discovery via BitTorrent Mainline DHT
global-discovery = ["dep:mainline", "aspen-core/global-discovery", "aspen-rpc-handlers/global-discovery"]
# SOPS-backed secrets management with age encryption
secrets = ["dep:aspen-secrets", "aspen-cluster/secrets", "aspen-rpc-handlers/secrets"]
# Automerge CRDT document layer for collaborative editing
automerge = ["dep:aspen-automerge", "aspen-rpc-handlers/automerge"]
# CI/CD pipeline system - basic shell/VM pipelines with Nickel configuration
# Does NOT include Nix binary cache integration (snix, nix-cache-proxy)
ci-basic = ["dep:aspen-ci", "dep:aspen-cache", "aspen-rpc-handlers/ci", "aspen-cluster/nickel", "aspen-ci/nickel", "aspen-ci/shell-executor", "jobs", "blob", "forge"]
# CI/CD with VM executor instead of shell executor
ci-vm = ["dep:aspen-ci", "aspen-rpc-handlers/ci", "aspen-cluster/nickel", "aspen-ci/nickel", "aspen-ci/plugins-vm", "jobs", "blob", "forge"]
# Full CI/CD with Nix binary cache integration (snix + HTTP/3 cache proxy)
ci = ["ci-basic", "aspen-testing?/ci"]
# Hooks handler for event-driven automation RPC (requires jobs for hook execution)
hooks = ["dep:aspen-hooks", "aspen-rpc-handlers/hooks", "aspen-cluster/hooks", "jobs"]
# SNIX storage integration for Nix binary cache
# Nix binary cache HTTP/3 gateway for serving NAR archives
# Jobs handler for distributed job queue operations
jobs = ["dep:aspen-jobs", "dep:aspen-jobs-worker-maintenance", "aspen-rpc-handlers/jobs", "aspen-cluster/jobs"]
# Docs handler for iroh-docs CRDT document operations
# Includes iroh-blobs since docs uses blob storage for content
docs = ["dep:aspen-docs", "dep:iroh-docs", "dep:iroh-blobs", "blob", "aspen-rpc-handlers/docs", "aspen-cluster/docs"]
# HTTP proxy: TCP/HTTP tunneling over iroh QUIC
proxy = ["dep:aspen-proxy"]
# Federation support for cross-cluster communication
federation = ["aspen-cluster/federation"]
# Deterministic simulation testing with madsim (for testing only)
simulation = ["dep:madsim", "dep:mad-turmoil", "aspen-testing?/simulation"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)", "cfg(feature, values(\"sql\", \"blob\", \"forge\", \"git-bridge\", \"global-discovery\", \"testing\", \"fuzzing\", \"bolero\", \"plugins\", \"plugins-vm\", \"plugins-wasm\", \"plugins-rpc\", \"shell-worker\", \"secrets\", \"automerge\", \"ci\", \"ci-basic\", \"ci-vm\", \"nix-cache-gateway\", \"snix\", \"hooks\", \"jobs\", \"docs\", \"simulation\", \"federation\", \"proxy\", \"nix-executor\", \"ci-vm-executor\"))"] }

[lints.clippy]
# Allow certain patterns in tests that are flagged during pre-commit
unnecessary_to_owned = "allow"
needless_borrow = "allow"

# Benchmarks
[[bench]]
name = "kv_operations"
harness = false
required-features = ["testing"]

[[bench]]
name = "workloads"
harness = false
required-features = ["testing"]

[[bench]]
name = "concurrency"
harness = false
required-features = ["testing"]

[[bench]]
name = "production"
harness = false
required-features = ["testing"]

[[bench]]
name = "sql"
harness = false
required-features = ["testing"]

[[bench]]
name = "write_batching"
harness = false
required-features = ["testing"]

# Integration tests requiring SQL feature (DataFusion + Arrow)
[[test]]
name = "sql_redb_integration_test"
required-features = ["sql", "testing"]

[[test]]
name = "madsim_sql_redb_cluster_test"
required-features = ["sql", "simulation", "testing"]

# Integration tests requiring CI feature (Nickel + Simulation)
[[test]]
name = "ci_integration_test"
required-features = ["ci", "testing"]

[[test]]
name = "madsim_ci_pipeline_test"
required-features = ["ci", "simulation", "testing"]

# Madsim simulation tests - require simulation feature
[[test]]
name = "madsim_single_node_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_multi_node_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_replication_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_clock_drift_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_heartbeat_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_append_entries_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_snapshot_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_membership_failure_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_failure_injection_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_advanced_scenarios_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_tester_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_proptest"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_redb_crash_recovery_test"
required-features = ["simulation", "testing"]

[[test]]
name = "madsim_job_worker_test"
required-features = ["simulation", "testing", "jobs"]

# Tests using DeterministicKeyValueStore/DeterministicClusterController (aspen::testing)
[[test]]
name = "inmemory_api_test"
required-features = ["testing"]

[[test]]
name = "coordination_rpc_test"
required-features = ["testing"]

[[test]]
name = "verify_integration_test"
required-features = ["testing", "simulation"]

[[test]]
name = "sharding_split_merge_test"
required-features = ["testing"]

[[test]]
name = "forge_git_bridge_integration_test"
required-features = ["testing", "forge", "git-bridge", "blob"]

[[test]]
name = "forge_cob_merge_test"
required-features = ["testing", "forge", "blob"]

[[test]]
name = "forge_hosting_e2e_test"
required-features = ["testing", "forge", "blob"]

# Chaos tests - require AspenRouter (testing feature)
[[test]]
name = "chaos_leader_crash"
required-features = ["testing"]

[[test]]
name = "chaos_membership_change"
required-features = ["testing"]

[[test]]
name = "chaos_message_drops"
required-features = ["testing"]

[[test]]
name = "chaos_network_partition"
required-features = ["testing"]

[[test]]
name = "chaos_slow_network"
required-features = ["testing"]

# Proptest tests requiring AspenRouter
[[test]]
name = "distributed_invariants_proptest"
required-features = ["testing"]

[[test]]
name = "raft_operations_proptest"
required-features = ["testing"]

# Router tests - require AspenRouter (testing feature)
[[test]]
name = "router_snapshot_t10_build_snapshot"
required-features = ["testing"]

[[test]]
name = "router_t10_see_higher_vote"
required-features = ["testing"]

[[test]]
name = "router_t11_elect"
required-features = ["testing"]

[[test]]
name = "router_t20_append_entries_three_membership"
required-features = ["testing"]

[[test]]
name = "router_t20_truncate_logs_revert_membership"
required-features = ["testing"]

[[test]]
name = "router_t50_append_entries_backoff_rejoin"
required-features = ["testing"]

[[test]]
name = "router_t50_install_snapshot_conflict"
required-features = ["testing"]

[[test]]
name = "router_t50_leader_restart"
required-features = ["testing"]

[[test]]
name = "router_t50_snapshot_when_lacking_log"
required-features = ["testing"]

[[test]]
name = "router_t61_heartbeat_reject_vote"
required-features = ["testing"]

# Simulation + testing tests
[[test]]
name = "fuzz_driven_madsim"
required-features = ["testing", "simulation"]

[[test]]
name = "soak_sustained_write_madsim"
required-features = ["testing", "simulation"]

# Tests using NodeBuilder::start() (needs jobs+docs+hooks+federation)
[[test]]
name = "raft_node_direct_api_test"
required-features = ["jobs", "docs", "hooks", "federation"]

[[test]]
name = "write_batching_integration"
required-features = ["jobs", "docs", "hooks", "federation"]

[[test]]
name = "gossip_e2e_integration"
required-features = ["jobs", "docs", "hooks", "federation"]

[[test]]
name = "multi_node_cluster_test"
required-features = ["jobs", "docs", "hooks", "federation"]

[[test]]
name = "node_builder_integration"
required-features = ["jobs", "docs", "hooks", "federation"]

# Feature-gated crate imports
[[test]]
name = "docs_sync_integration_test"
required-features = ["docs"]

[[test]]
name = "docs_sync_test"
required-features = ["docs"]

[[test]]
name = "forge_cob_proptest"
required-features = ["forge", "blob"]

[[test]]
name = "forge_gossip_integration_test"
required-features = ["forge"]

[[test]]
name = "forge_real_cluster_integration_test"
required-features = ["forge", "blob", "jobs", "docs", "hooks", "federation"]

[[test]]
name = "forge_sync_integration_test"
required-features = ["forge", "blob", "git-bridge"]

[[test]]
name = "forge_federation_test"
required-features = ["federation"]

[[test]]
name = "federation_integration_test"
required-features = ["federation"]

[[test]]
name = "consumer_group_integration_test"
required-features = ["hooks", "jobs", "docs", "federation"]

[[test]]
name = "pubsub_integration_test"
required-features = ["hooks", "jobs", "docs", "federation"]

[[test]]
name = "hooks_integration_test"
required-features = ["hooks"]

[[test]]
name = "blob_gc_integration_test"
required-features = ["blob"]

[[test]]
name = "blob_replication_integration_test"
required-features = ["blob"]

[[test]]
name = "job_integration_test"
required-features = ["jobs"]

[[test]]
name = "shell_command_worker_test"
required-features = ["shell-worker"]

[[test]]
name = "secrets_integration_test"
required-features = ["secrets"]

[[test]]
name = "fuse_raft_cluster_test"
required-features = ["jobs", "docs", "hooks", "federation"]

# Vendored patches: cargo-hyperlight patched to replace --build-plan
# (removed in Cargo 1.93) with stable --message-format=json.
[patch.crates-io]
cargo-hyperlight = { path = "vendor/cargo-hyperlight" }

# Override git deps from extracted repos to use local workspace crates
[patch."https://github.com/brittonr/aspen.git"]
aspen-core = { path = "crates/aspen-core" }
aspen-blob = { path = "crates/aspen-blob" }
aspen-cache = { path = "../aspen-nix/crates/aspen-cache" }
aspen-jobs = { path = "../aspen-jobs/crates/aspen-jobs" }
aspen-auth = { path = "crates/aspen-auth" }
aspen-forge = { path = "../aspen-forge/crates/aspen-forge" }
aspen-ticket = { path = "crates/aspen-ticket" }
aspen-client-api = { path = "crates/aspen-client-api" }
aspen-client = { path = "crates/aspen-client" }
aspen-testing = { path = "crates/aspen-testing" }
aspen-wasm-guest-sdk = { path = "crates/aspen-wasm-guest-sdk" }
aspen-plugin-api = { path = "crates/aspen-plugin-api" }
aspen-coordination = { path = "../aspen-coordination/crates/aspen-coordination" }
aspen-docs = { path = "../aspen-docs/crates/aspen-docs" }
aspen-secrets = { path = "../aspen-secrets/crates/aspen-secrets" }
aspen-hooks = { path = "../aspen-hooks/crates/aspen-hooks" }
aspen-federation = { path = "../aspen-federation/crates/aspen-federation" }
